--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.2",
+    "history": "^4.9.0",
     "jaraxxus": "1.0.0-beta.13",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.6.3"
+    "react-hot-loader": "^4.6.3",
+    "react-loadable": "^5.5.0",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0"
   }
 }
