--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/history": "^4.7.2",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "autoprefixer": "^9.1.1",
     "babel-eslint": "8.2.6",
     "babel-plugin-import": "^1.11.0",
