--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@types/history": "^4.7.2",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "@types/react-loadable": "^5.5.1",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "autoprefixer": "^9.1.1",
     "babel-eslint": "8.2.6",
     "babel-plugin-import": "^1.11.0",
@@ -41,6 +44,7 @@
     "react-hot-loader": "^4.6.3",
     "react-loadable": "^5.5.0",
     "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "typescript": ">=3.2.1 <3.4.0"
   }
 }
