--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "jaraxxus start",
     "build": "jaraxxus build"
   },
-  "author": "",
+  "author": "Milk",
   "license": "ISC",
   "dependencies": {
-    "antd": "^3.16.3"
+    "antd": "^3.16.3",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -19,7 +20,9 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/history": "^4.7.2",
+    "@types/lodash": "^4.14.132",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/react-loadable": "^5.5.1",
@@ -32,6 +35,7 @@
     "babel-plugin-import": "^1.11.0",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-typescript": "^4.0.0",
     "eslint-plugin-compat": "^2.6.3",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
