--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "Milk",
   "license": "ISC",
   "dependencies": {
-    "antd": "^3.16.3",
-    "lodash": "^4.17.11"
+    "antd": "3.19.8",
+    "lodash": "^4.17.11",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -28,6 +29,7 @@
     "@types/react-loadable": "^5.5.1",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.1.14",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "autoprefixer": "^9.1.1",
