--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "es2017.object"
     ],
     "target": "es5", // "es2015" for ES6+ engines
+    "types": [],
     "module": "esNext", // "es2015" for tree-shaking
     "moduleResolution": "node",
     "noEmitOnError": false,
